--- a/pp.css
+++ b/pp.css
@@ -51,9 +51,10 @@
 }
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  background-color: white;
   transition: 0.3s;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 15px;
   padding: 10px;
   margin-top: 50px;
   /*margin-left: 5px;*/
@@ -67,6 +68,7 @@
 }
 .card1 {
   box-shadow: 3px 2px 3px 2px rgba(0,0,0,0.2);
+  background-color: #DCDCDC ;
   transition: 0.3s;
   width: 100%;
   border-radius: 5px;
@@ -75,11 +77,33 @@
   /*margin-left: 5px;*/
   margin-right: 10px;
   margin-bottom: 10px;
-  border-left: 2px solid grey;
+  border-left: 2px solid #C0C0C0;
  
 }
 
 .card1:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
+}
+
+header {
+  background: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url('backmain.png');
+  background-size: cover;
+  height: 100vh;
+}
+
+.title {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  width: 100%;
+  text-align: center;
 }
 
